Bug 965912 - Initialize DateCacheCleaner (which registers an observer to the chrome process) after forking from the Nuwa process. r=khuey